# plonky2_keccak

./: Cargo.toml  README.md  rustfmt.toml
diffs/: take_diff.sh
diffs/result/: columns.rs.diff  constants.rs.diff  keccak_stark.rs.diff  logic.rs.diff  round_flags.rs.diff
src/: builder.rs  circuit_utils.rs  hook.rs  lib.rs  utils.rs
src/generators/: mod.rs  single_generator.rs  stark_proof_generator.rs
src/keccak_stark/: columns.rs  constants.rs  ctl_values.rs  keccak_stark.rs  logic.rs  mod.rs  prover.rs  round_flags.rs  utils.rs  verifier.rs
